# philostone

./: Cargo.toml  README.md  flake.nix
src/: cli.rs  lib.rs  main.rs  pool.rs
