[package]
name = "philostone"
version = "0.1.0"
edition = "2021"
authors = ["Wybxc <wybxc@qq.com>"]
description = "Online danmaku backend"
license = "Apache-2.0"
repository = ""
rust-version = "1.70.0"
readme = "README.md"
exclude = ["flake.nix", "flake.lock", ".github/"]

[dependencies]
argh = "0.1.12"
async-broadcast = "0.6.0"
async-lock = "2.8.0"
async-tungstenite = "0.23.0"
compact_str = { version = "0.7.1", features = ["serde"] }
easy-parallel = "3.3.1"
eyre = "0.6.8"
futures = "0.3.28"
heapless = "0.7.16"
human-panic = "1.2.1"
num_cpus = "1.16.0"
serde = "1.0.189"
serde_json = "1.0.107"
slotmap = "1.0.6"
smol = "1.3.0"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
tungstenite = "0.20.1"

[profile.release]
lto = true

[build-dependencies]
built = { version = "0.7.1", features = ["chrono", "git2"] }
